--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "EatABurger"
-  },
-  "author": "Clay H",
+  "keywords": [],
+  "author": "",
   "license": "ISC"
 }
